--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ cryptography==3.4.7
 defusedxml==0.7.1
 dj-database-url==0.5.0
 dj-email-url==1.0.2
+dj-rest-auth==2.1.4
 Django==3.2.2
 django-allauth==0.44.0
 django-cache-url==3.2.3
